Fixed layout on mobile

--- a/themes/wnks/assets/css/sass/light-theme/base/_overrides.scss
+++ b/themes/wnks/assets/css/sass/light-theme/base/_overrides.scss
@@ -25,6 +25,12 @@ a:hover .highlights__community--title
 
 }
 
-.swiper-sidebar-meta {
-    display: block;
+.swiper-sidebar {
+    @media (max-width: 767px) {
+        flex-direction: column;
+    }
+
+    .swiper-sidebar-meta {
+        display: block;
+    }
 }
